# model-viewer

./: .gitignore  CMakeLists.txt  conanfile.txt
cmake/: ShaderString.cmake
src/: main.cpp
src/app/: grid.cpp  grid.h  menu.cpp  menu.h  viewport.cpp  viewport.h
src/core/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  window.cpp  window.h
src/mesh/: cube.h  monkey.h
src/shaders/: fragment.frag  grid.frag  grid.vert  scene.frag  scene.vert  vertex.vert
